@@ -7,6 +7,8 @@ New features:
 
 Bug fixes:
 
+* Fix GitHub Issue #21: Clicking on the empty area of a note column won't set focus
+
 Other:
 
 0.10.0
